2017-07-02      3.4001  Added some nominally redundant dependencies (see
                          https://github.com/DrHyde/perl-modules-Number-Phone/pull/68);
                        UK "protected" numbers are now included;
                        Data updates

2017-03-14      3.4000  Changed Kosovo's placeholder country-code from KOS to XK;
                        +383 (Kosovo) is now a special-case for validation
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/66);
                        Data updates

2016-12-06      3.3000  Implemented is_drama
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/pull/61);
                        NANP modules now know about is_tollfree, is_specialrate and
                          is_personal;
                        Number::Phone::Country will now warn that exporting is deprecated;
                        Stubs and dial_to are no longer experimental;
                        Minor doco improvements, including some from the Debian project
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/60);
                        Minor coverage improvements by getting rid of some redundant
                          code paths;
                        More comprehensive testing of stubs, and resulting bug-fixes for
                          territories that appear as part of another's number plan, such
                          as enormous Kazakhstan and tiny Tristan da Cunha;
                        Data updates

2016-09-07      3.2001  Data updates

2016-06-05      3.2000  Bump version number because rpm is stupid and thinks
                          3.1 < 3.0014;
                        Recognize Isle of Man (IM) free/special-rate
                          numbers;
                        Data updates

2016-03-04      3.1     Added the format_using() method and the ability to