@@ -31,24 +31,24 @@ sub phone2country {
 
 our %NANP_areas = (
     CA => do {
-        # from http://www.cnac.ca/co_codes/co_code_status.htm, 2014-04-20
+        # from http://www.cnac.ca/co_codes/co_code_status.htm, 2017-07-14
         my $canada = join('|', qw(
             204 226 236 249 250 289
-            306 343 365
+            306 343 365 367
             403 416 418 431 437 438 450
             506 514 519 548 579 581 587
             604 613 639 647
             705 709 778 780 782
-            807 819 825 867 873
+            807 819 825 867 873 879
             902 905
         ));
         # handful of non-geographic country-specific codes ...
         $canada = join('|', $canada, 600, 622, 633, 644, 655, 677, 688);
     },
     US => do {
-        # from http://www.nanpa.com/enas/geoAreaCodeAlphabetReport.do, 2014-04-20
+        # from http://www.nanpa.com/enas/geoAreaCodeAlphabetReport.do, 2017-07-14
         my $usa = join('|', qw(
-            907 334 938 256 251 205 870 479 501 520 480 928 602 623 619 562 650 657 661 408 415 424 442 626 559 530 510 323 310 951 949 925 209 213 669 707 714 747 760 805 818 831 858 909 916 303 970 720 719 203 475 860 202 302 407 561 727 754 772 786 813 850 863 904 941 954 305 321 352 386 239 404 229 762 470 678 706 478 770 912 808 712 319 641 563 515 208 708 224 217 618 630 331 312 309 872 847 773 779 815 317 219 812 574 260 765 913 316 785 620 502 859 364 270 606 225 985 504 337 318 857 781 774 978 413 339 351 508 617 240 301 410 667 443 207 248 947 810 989 517 734 313 231 269 586 906 616 763 218 651 612 507 320 952 636 573 314 417 816 660 769 601 228 662 406 252 704 828 910 919 980 984 336 701 308 402 603 732 856 862 908 973 201 609 848 551 575 505 775 702 914 718 929 845 212 315 347 646 585 631 516 518 607 716 917 614 567 513 330 937 740 234 216 440 419 918 405 539 580 971 541 503 458 610 412 215 717 724 814 484 570 878 267 272 401 843 864 803 605 931 615 901 865 423 731 713 737 806 817 512 832 903 915 940 956 972 979 936 281 325 361 682 254 214 210 469 432 430 409 830 385 435 801 434 703 757 571 804 276 540 802 360 253 206 425 509 262 920 534 414 608 715 304 681 307
+            907 334 251 205 938 256 501 479 870 520 480 928 602 623 619 562 628 650 657 661 408 415 424 442 626 559 530 510 323 310 951 949 925 916 209 213 669 707 714 747 760 805 818 831 858 909 719 303 970 720 475 203 860 959 202 302 407 561 727 754 772 786 813 850 863 904 941 954 305 321 352 386 239 404 229 762 470 678 706 478 770 912 808 515 712 641 319 563 208 708 224 217 618 630 331 312 309 872 847 815 779 773 219 317 463 812 574 930 765 260 913 316 785 620 502 859 364 270 606 225 985 504 337 318 774 617 351 508 857 978 413 339 781 240 410 301 443 667 207 734 248 231 586 616 517 313 269 989 947 906 810 952 320 218 651 763 612 507 314 573 660 816 636 417 601 662 228 769 406 704 252 980 828 910 919 743 984 336 701 308 531 402 603 856 848 908 732 973 201 609 862 551 575 505 725 702 775 315 332 680 347 212 585 646 516 518 631 607 845 934 716 718 929 917 914 614 567 513 380 330 937 740 234 220 216 440 419 405 539 580 918 541 971 503 458 610 412 215 717 724 814 484 570 878 267 272 401 843 803 864 854 605 931 423 629 901 615 865 731 737 806 817 512 832 903 915 940 956 972 979 936 281 325 346 361 713 682 254 214 210 469 432 430 409 830 385 435 801 434 703 757 571 804 276 540 802 360 253 206 425 509 262 920 534 414 608 715 304 681 307 
         ));
         # handful of non-geographic country-specific codes ...
         $usa    = join('|', $usa,    710);
