@@ -1,3 +1,6 @@
+2017-XX-XX      XXXXXX  Add new US and CA area codes;
+                        Data updates
+
 2017-07-02      3.4001  Added some nominally redundant dependencies (see
                           https://github.com/DrHyde/perl-modules-Number-Phone/pull/68);
                         UK "protected" numbers are now included;
